# nimbro-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nimbro_api/: __init__.py
src/nimbro_api/api/: __init__.py
src/nimbro_api/api/misc/: __init__.py
src/nimbro_api/api/misc/base/: no_base.py  vlm_gist_base.py
src/nimbro_api/api/misc/client/: no.py  vlm_gist.py
src/nimbro_api/api/misc/test/: no_test.py  vlm_gist_test.py
src/nimbro_api/api/nimbro_vision_servers/: __init__.py  utility.py
src/nimbro_api/api/nimbro_vision_servers/base/: dam_base.py  florence2_base.py  kosmos2_base.py  mmgroundingdino_base.py  sam2_realtime_base.py
src/nimbro_api/api/nimbro_vision_servers/client/: dam.py  florence2.py  kosmos2.py  mmgroundingdino.py  sam2_realtime.py
src/nimbro_api/api/nimbro_vision_servers/test/: dam_test.py  florence2_test.py  kosmos2_test.py  mmgroundingdino_test.py  sam2_realtime_test.py
src/nimbro_api/api/openai/: __init__.py  utility.py  voice_presets.json
src/nimbro_api/api/openai/base/: chat_completions_base.py  classify_base.py  embeddings_base.py  images_base.py  speech_base.py  transcriptions_base.py  translations_base.py
src/nimbro_api/api/openai/client/: chat_completions.py  classify.py  embeddings.py  images.py  speech.py  transcriptions.py  translations.py
src/nimbro_api/api/openai/parser/: __init__.py  json_decode.py  pointing_molmo.py  pointing_qwen.py  reasoning_extract.py  string_normalize.py  string_strip.py  template.py
src/nimbro_api/api/openai/test/: chat_completions_test.py  classify_test.py  embeddings_test.py  images_test.py  speech_test.py  transcriptions_test.py  translations_test.py
src/nimbro_api/client/: __init__.py  client.py  client_base.py
src/nimbro_api/core/: __init__.py  core.py  core_base.py
src/nimbro_api/test/: __init__.py  test.py
src/nimbro_api/utility/: __init__.py  api.py  io.py  logger.py  misc.py  string.py  visual.py
