[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbro_api"
version = "0.1.0"
description = "A robust and flexible framework for API clients in Python"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31"
]

authors = [
    { name="Bastian Pätzold", email="paetzoldbastian@gmail.com" }
]
maintainers = [
    { name="Bastian Pätzold", email="paetzoldbastian@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://nimbro.net"
Repository = "https://github.com/ptzld/nimbro_api"

[tool.setuptools.package-data]
nimbro_api = ["test/assets/*", "**/*.json"]
