[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbro-api"
version = "0.2.2"
description = "A robust and flexible framework for API clients in Python"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

authors = [
    { name="Bastian Pätzold", email="paetzoldbastian@gmail.com" }
]
maintainers = [
    { name="Bastian Pätzold", email="paetzoldbastian@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
fast = [
    "orjson",
    "pybase64",
]
visual = [
    "numpy",
    "pillow",
    "opencv-python",
]
full = [
    "orjson",
    "pybase64",
    "numpy",
    "pillow",
    "opencv-python",
    "jsonschema",
]

[project.urls]
Homepage = "https://www.ais.uni-bonn.de/index.html"
Repository = "https://github.com/ptzld/nimbro-api"

[tool.setuptools.package-data]
nimbro_api = ["**/*.json", "fonts/*", "test/assets/*"]

[tool.pylint.messages_control]
disable = [
    "global-statement",
    "missing-docstring",
    "too-many-positional-arguments",
]
confidence = ["HIGH"]
